<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SelectActivityRegistrator" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select" />

    <Button
        android:id="@+id/registrator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:text="@string/registrator"
        android:onClick="startRegistrator" />

    <Button
        android:id="@+id/recorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/registrator"
        android:layout_below="@+id/registrator"
        android:layout_marginTop="35dp"
        android:onClick="startRecorder"
        android:text="@string/recorder" />

    <Button
        android:id="@+id/generator"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/recorder"
        android:layout_below="@+id/recorder"
        android:layout_marginTop="39dp"
        android:onClick="startGenerator"
        android:text="@string/generator" />

    <TextView
        android:id="@+id/properties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registrator"
        android:layout_below="@+id/generator"
        android:layout_marginTop="32dp"
        android:text="@string/propertiesNull"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>